Fix hidden text because of overflow

--- a/foundations/landing-page/style.css
+++ b/foundations/landing-page/style.css
@@ -100,6 +100,11 @@ button {
 }
 
 .info-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.info-img {
     border: 4px #3882f6 solid;
     border-radius: 20px;
     width: 175px;
@@ -111,4 +116,9 @@ img {
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+p {
+    width: 175px;
+    text-align: center;
 }
